# mail-cleaner

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: handoff.md
.claude/memory/: MEMORY.md  feedback_commit_style.md  feedback_db_design.md  feedback_docs.md  project_db_architecture.md  project_next_steps.md
.claude/skills/karpathy-guidelines/: SKILL.md
.claude/skills/pack/: SKILL.md
.claude/skills/unpack/: SKILL.md
.github/: git_commit_template.md  pull_request_template.md
data/: papers.md
doc/: architecture.md  setup-guide.md  slack-setup.md
docs/: architecture.md  plan.md  setup-guide.md  slack-setup.md
img/: README.md
src/larklab/: abstract_fetcher.py  cleanup.py  config.py  dedup.py  gmail_client.py  main.py  models.py  pipeline.py  schemas.py  scholar_parser.py  slack_output.py  summarizer.py
src/larklab/cli/: __init__.py  common.py  digest.py  io.py  paper.py
src/larklab/database/: embedder.py  repository.py
src/larklab/extract/: abstract_fetcher.py  gmail_client.py  paper_fetcher.py  scholar_parser.py
src/larklab/load/: slack.py  terminal.py
src/larklab/transform/: dedup.py  summarizer.py
src/mail_cleaner/: abstract_fetcher.py  cleanup.py  config.py  dedup.py  gmail_client.py  main.py  models.py  output.py  pipeline.py  scholar_parser.py  slack_output.py  summarizer.py
tests/: check_parsing.py  test_delete.py  test_send.py  test_slack.py  test_slack_digest.py
